2008-01-29  Mario Sanchez Prada  <msanchez@maemo.org>

	* src/apt-worker-bin.cc (domains_last_modified): New global
	variable to keep track of when was the last modification for
	/etc/hildon-application-manager/domains file (N79708).
	(file_last_modified): New function to check when a file was
	modified for the last time (N79708).
	(read_domain_conf): Update the new domains_last_modified variable
	by calling to file_last_modified (DOMAIN_CONF) (N79708).
	(handle_request): Check if the domains file was modified since the
	last time it was read, to know whether or not is needed to call to
	read_domain_conf again to keep global variables updated (N79708).

2008-01-23 Felipe Erias Morandeira  <femorandeira@maemo.org>

        * src/util.cc (package_info_func): retrieve the information that
        will be shown for a given package, and fill the cell renderer with it.
        (make_global_package_list): create a treeview using Modest's cell renderers

        * src/modest-hbox-cell-renderer.[hc]: added legal notice

        * src/modest-vbox-cell-renderer.c : added legal notice
        (modest_vbox_cell_renderer_get_size) don't expand for invisible children

        * src/modest-vbox-cell-renderer.h : added legal notice

        * src/Makefile.am: updated to use the new code files.

2008-01-23 Felipe Erias Morandeira  <femorandeira@maemo.org>

        * src/modest-hbox-cell-renderer.[hc]: This is a cell renderer from
        Modest that renders children renderers inside a horizontal box.

        * src/modest-vbox-cell-renderer.[hc]: This is a cell renderer from
        Modest that renders children renderers inside a vertical box.

2008-01-23  Mario Sanchez Prada  <msanchez@maemo.org>

	* src/apt-worker-bin.cc (operation): Don't forget to encode the
	trust summary and upgrades information fields in the response when
	running APTCMD_INSTALL_CHECK, even when there's nothing to do, to
	be compliant with the defined protocol (N78908).
